@@ -205,6 +205,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
 					<threadCount>1</threadCount>
 					<forkCount>1</forkCount>
 				</configuration>
@@ -305,6 +306,7 @@
 						<artifactId>maven-surefire-plugin</artifactId>
 						<version>3.0.0</version>
 						<configuration>
+							<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
 							<threadCount>1</threadCount>
 							<forkCount>1</forkCount>
 							<skipTests>true</skipTests>
@@ -316,6 +318,7 @@
 						<artifactId>maven-failsafe-plugin</artifactId>
 						<version>3.0.0</version>
 						<configuration>
+							<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
 							<includes>
 								<include>**/*IT.java</include>
 							</includes>
